--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -13,8 +13,16 @@
         <p>What is <a href="#" class="landing-hero-main-link">Besterday</a>?</p>
         <p>Besterday helps you <a href="#" class="landing-hero-main-link capture">capture</a>, <a href="#" class="landing-hero-main-link catalogue">catalogue</a>, and <a href="#" class="landing-hero-main-link remember">remember</a> the best part of your day, everyday.</p>
 
+
+        <div class="landing-hero-main-email">
+          <!-- Username -->
+          <label class="control-label"  for="email">Email</label>
+          <div class="controls">
+            <input type="text" id="email" name="email" placeholder="Email" class="input-xlarge">
+          </div>
+        </div>
         <a href="#" class="landing-hero-main-cta">Sign up</a>
-        {{> mailchimp }}
+
       </div>
     </div>
 
