--- a/client/views/landing/landing_login.html
+++ b/client/views/landing/landing_login.html
@@ -1,5 +1,5 @@
 <template name="login">
-<form class="login">
+<form id="login">
     <div class="control-group">
       <!-- Username -->
       <label class="control-label"  for="username">Username</label>
