--- a/client/style/_global.scss
+++ b/client/style/_global.scss
@@ -102,69 +102,6 @@ body {
   }
 }
 
-  .nav {
-    /* Positioning */
-    position:absolute;
-    top:0;
-    left:50%;
-    z-index:0;
-    overflow:hidden;
-    margin-left:-24px;
-    width:48px;
-    height:100%;
-
-    .nav-up,.nav-dn {
-      /* Positioning */
-      position:absolute;
-      @include box-sizing;
-      height:48px;
-      width:48px;
-
-      /* Display & Box Model */
-      display:block;
-
-      /* Presentation */
-      overflow:hidden;
-      border:1px solid $orange;
-      border-radius:24px;
-      background:transparent url(/img/arrow.svg) center no-repeat;
-
-      /* Font */
-      text-indent:-999em;
-    }
-    .nav-up {
-      top:-48px;
-    }
-    .nav-dn {
-      bottom:-48px;
-      @include transform(rotate(180deg));
-    }
-  }
-
-#login-buttons{
-  position:absolute;
-  right:20px;
-  z-index:999
-}
-
-
-#login {
-  @include box-sizing;
-  position: absolute;
-  top:0;
-  left:100%;
-  width:100%;
-  height:100%;
-  height:500px;
-  padding:200px 80px 80px;
-  @include transition(left 1s);
-  // background:rgba(240,240,240,.5);
-  #login-form,#account-form{
-    display:block;
-    width:50%;
-    float:left;
-  }
-}
 
 
 /* ==========================================================================
@@ -257,6 +194,12 @@ body {
     background:$yellow;
     color:#ffffff;
   }
+}
+
+@mixin button-large {
+  @include button-default;
+  padding:20px;
+  font-size:14px;
 }
 
 strong {
