--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -139,11 +139,35 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$color1', end
 }
 
 
-// Isotope bug fix:
-.isotope,.isotope-item{
-  -webkit-transition-duration: 0s !important;
-     -moz-transition-duration: 0s !important;
-      -ms-transition-duration: 0s !important;
-       -o-transition-duration: 0s !important;
-          transition-duration: 0s !important;
-        }
+
+.fadeIn{
+  animation-name: fadeIn;
+  -webkit-animation-name: fadeIn; 
+
+  animation-duration: .5s; 
+  -webkit-animation-duration: .5s;
+
+  animation-timing-function: ease-in-out; 
+  -webkit-animation-timing-function: ease-in-out;   
+
+  visibility: visible !important; 
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.0;   
+  }
+  100% {
+    opacity: 1; 
+  }   
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0.0;   
+  }
+  100% {
+    opacity: 1; 
+  }   
+}
+
