--- a/client/style/main.css
+++ b/client/style/main.css
@@ -20,12 +20,28 @@
   font-size: 12px;
   font-family: "ratio"; }
 
-.isotope, .isotope-item {
-  -webkit-transition-duration: 0s !important;
-  -moz-transition-duration: 0s !important;
-  -ms-transition-duration: 0s !important;
-  -o-transition-duration: 0s !important;
-  transition-duration: 0s !important; }
+.fadeIn {
+  animation-name: fadeIn;
+  -webkit-animation-name: fadeIn;
+  animation-duration: .5s;
+  -webkit-animation-duration: .5s;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: ease-in-out;
+  visibility: visible !important; }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.0; }
+
+  100% {
+    opacity: 1; } }
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0.0; }
+
+  100% {
+    opacity: 1; } }
 
 /* ==========================================================================
    Global styles
@@ -151,73 +167,6 @@ body {
 .cover {
   z-index: 11;
   background: transparent; }
-
-.nav {
-  /* Positioning */
-  position: absolute;
-  top: 0;
-  left: 50%;
-  z-index: 0;
-  overflow: hidden;
-  margin-left: -24px;
-  width: 48px;
-  height: 100%; }
-  .nav .nav-up, .nav .nav-dn {
-    /* Positioning */
-    position: absolute;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    box-sizing: border-box;
-    height: 48px;
-    width: 48px;
-    /* Display & Box Model */
-    display: block;
-    /* Presentation */
-    overflow: hidden;
-    border: 1px solid #ffae41;
-    border-radius: 24px;
-    background: transparent url(/img/arrow.svg) center no-repeat;
-    /* Font */
-    text-indent: -999em; }
-  .nav .nav-up {
-    top: -48px; }
-  .nav .nav-dn {
-    bottom: -48px;
-    -webkit-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg); }
-
-#login-buttons {
-  position: absolute;
-  right: 20px;
-  z-index: 999; }
-
-#login {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: 100%;
-  height: 100%;
-  height: 500px;
-  padding: 200px 80px 80px;
-  -webkit-transition: left 1s;
-  -moz-transition: left 1s;
-  -ms-transition: left 1s;
-  -o-transition: left 1s;
-  transition: left 1s; }
-  #login #login-form, #login #account-form {
-    display: block;
-    width: 50%;
-    float: left; }
 
 /* ==========================================================================
    Text styles
@@ -474,6 +423,92 @@ strong {
   opacity: 0;
   pointer-events: none; }
 
+#signup {
+  z-index: 99;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(49, 43, 44, 0.95);
+  color: #ffffff; }
+  #signup .control-group {
+    float: left;
+    width: 50%; }
+    #signup .control-group:first-child {
+      text-align: right; }
+  #signup .control-submit {
+    clear: left;
+    text-align: center; }
+  #signup .signup-wrapper {
+    overflow: hidden;
+    margin: 0 auto 40px auto; }
+  #signup h3 {
+    font-family: "ratio",Arial;
+    font-weight: 100;
+    font-size: 42px;
+    text-align: center; }
+  #signup label {
+    display: none; }
+  #signup input {
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    font-weight: 200;
+    font-size: 18px;
+    font-family: "ratio",Arial;
+    line-height: 1.2em;
+    display: inline-block;
+    margin: 0 10px 0 0;
+    padding: 7px 6px;
+    width: 120px;
+    outline: none;
+    border: 1px solid #443f41;
+    background: #443f41;
+    color: #e5e1e1;
+    width: 240px;
+    margin: 5px 20px; }
+    #signup input:hover {
+      background: #494446; }
+    #signup input:focus {
+      border-color: #ffc157; }
+  #signup button {
+    font-family: "futura-pt",Arial;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 16px;
+    letter-spacing: 2px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    border-radius: 4px;
+    display: inline-block;
+    margin: 0px;
+    padding: 11px 8px 12px;
+    min-width: 80px;
+    text-align: center;
+    outline: none;
+    border: 1px solid #726d6e;
+    background: transparent;
+    color: #726d6e;
+    text-decoration: none;
+    font-size: 11px;
+    padding: 20px;
+    font-size: 14px; }
+    #signup button:hover {
+      border-color: #ffc157;
+      background: #ffc157;
+      color: #ffffff; }
+
 .landing-hero {
   background: #312b2c;
   color: #ffffff;
@@ -598,11 +633,11 @@ strong {
     background: #ffc157;
     color: #ffffff; }
 
-.login {
+#login {
   display: block; }
-  .login label {
+  #login label {
     display: none; }
-  .login input {
+  #login input {
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -ms-transition: all 0.2s;
@@ -627,11 +662,11 @@ strong {
     color: #e5e1e1;
     display: inline-block;
     float: left; }
-    .login input:hover {
+    #login input:hover {
       background: #494446; }
-    .login input:focus {
+    #login input:focus {
       border-color: #ffc157; }
-  .login button {
+  #login button {
     font-family: "futura-pt",Arial;
     font-weight: 700;
     text-transform: uppercase;
@@ -655,7 +690,7 @@ strong {
     font-size: 11px;
     display: inline-block;
     float: left; }
-    .login button:hover {
+    #login button:hover {
       border-color: #ffc157;
       background: #ffc157;
       color: #ffffff; }
