--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -21,7 +21,7 @@
             <input type="text" id="email" name="email" placeholder="Email" class="input-xlarge">
           </div>
         </div>
-        <a href="#" class="landing-hero-main-cta">Sign up</a>
+        <button class="landing-hero-main-cta">Sign up</a>
 
       </div>
     </div>
