--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -8,8 +8,15 @@
   <div id="profile" class="page">
     {{> profile_header}}
     {{> profile_stats}}
-      <div class="profile-grid"><div class="profile-grid-inner">
-      </div></div>
+
+    {{> profile_gridmenu}}
+
+      <div class="profile-grid">
+
+        <div class="profile-grid-inner">
+        </div>
+
+      </div>
       <a class="profile-grid-more" href="#">Show more&hellip;</a>
 
     <h2 class="profile-outro">
