--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -8,7 +8,7 @@
   <div id="profile" class="page">
     {{> profile_header}}
     {{> profile_stats}}
-
+<div class="grid-container">
     {{> profile_gridmenu}}
 
       <div class="profile-grid">
@@ -17,6 +17,7 @@
         </div>
 
       </div>
+</div>
       <a class="profile-grid-more" href="#">Show more&hellip;</a>
 
     <h2 class="profile-outro">
