--- a/client/views/profile/profile_gridmenu.html
+++ b/client/views/profile/profile_gridmenu.html
@@ -1,7 +1,7 @@
 <template name="profile_gridmenu">
-<!--     <div class="profile-grid-menu">
-      <a href="#">
-        Test
+    <div class="profile-grid-menu">
+      <a class="back sticky" href="#">
+        Back to top
       </a>
-    </div> -->
+    </div>
   </template>
