--- a/client/style/main.css
+++ b/client/style/main.css
@@ -1891,9 +1891,11 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
 /* ==========================================================================
    Profile Grid
    ========================================================================== */
+.grid-container {
+  background: #312b2c; }
+
 .profile-grid {
-  width: 95%;
-  padding-left: 5%;
+  margin-left: 40px;
   /* Prevent vertical gaps */
   overflow: hidden;
   background: #312b2c;
@@ -1902,10 +1904,6 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
   -ms-transition: max-height 2s;
   -o-transition: max-height 2s;
   transition: max-height 2s; }
-
-.profile-grid-menu {
-  width: 5%;
-  background: #312b2c; }
 
 .profile-grid-stories {
   -webkit-transform-style: preserve-3d;
@@ -2317,6 +2315,38 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     color: #ffc157;
     background-position: 50% 80px;
     opacity: 1; }
+
+/* ==========================================================================
+   Profile Grid Menu
+   ========================================================================== */
+.profile-grid-menu {
+  width: 40px;
+  background: #312b2c;
+  position: absolute;
+  padding: 5px; }
+  .profile-grid-menu a {
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 5px;
+    text-align: center;
+    background: #000000; }
+    .profile-grid-menu a:hover {
+      background: #ffc157; }
+    .profile-grid-menu a.sticky {
+      position: fixed;
+      bottom: 0; }
+  .profile-grid-menu .back {
+    font-size: 0; }
+    .profile-grid-menu .back::after {
+      content: "";
+      display: inline-block;
+      width: 0;
+      height: 0;
+      margin-top: 10px;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 8px solid #ffffff; }
 
 @-webkit-keyframes OpenTop {
   25% {
