--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -27,10 +27,36 @@
     </div>
 
   <div class="landing-body">
+    <h2>What is Besterday?</h2>
+    <p>Besterday is a simple tool that only serves one function: It asks you to write down the best thing that happened to you yesterday. It can be anything.</p>
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>Something joyful.</p>
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>Something goofy.</p>
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>Maybe even something meaningful.</p>
+    <p>The way you interact is up to you, but no matter how you use it, Besterday helps remind you that the things that make you happy are already there.</p>
+
+    <h2>Besterday is private by default.<br />And your data is yours.</h2>
+    <p>By default, all created posts are private. We think this is important, because sometimes what makes you happiest is intimate.</p> 
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>That's not to say that sharing isn't easy.</p>
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>Oh yea, and all your data is yours. Take it and bring it with you wherever you want.</p>
+
+    <h2>Why Besterday?</h2>
+    <p>Bla bla sappy sentence about "today's society"</p>
+    <p>We think that by reflecting and reliving the positive experiences in your life, we might be able to retrain our brains to seek out the things that make us happy and successful.</p>
+    <img src="http://placehold.it/600x200" alt="#">
+    <p>Hopefully, in some small way you agree, and we can make a contribution towards making the world a more productive and positive place.</p>
 
     <div class="landing-body-tout">
       <span>Mobile version coming soon</span>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
     <img src="/img/promo.jpg" alt="Promo"/>
 
   </div>
