--- a/client/style/_landing.scss
+++ b/client/style/_landing.scss
@@ -83,18 +83,33 @@
 
 
 .landing-body {
+  @include text-paragraph;
   position:relative;
   background:#ffffff;
   text-align:center;
-  padding:80px 0;
+  padding:20px 0 80px 0;
   img {
     max-width:60%;
+    margin-bottom:24px;
+  }
+  p,h2 {
+    max-width:60%;
+    margin:0 auto;
+    margin-bottom: 24px;
+  }
+  h2 {
+    @include text-smallcaps;
+    margin-top: 36px;
+    font-weight:200;
+    color:$grey3;
+  }
+  p {
+    font-weight:300;text-align:left;
   }
 }
   .landing-body-tout {
     @include prefix(border-radius,70px);
     position:absolute;
-    top:40px;
     right:15%;
     display:table;
     overflow:hidden;
