--- a/client/views/landing/footer.html
+++ b/client/views/landing/footer.html
@@ -1,6 +1,6 @@
 <template name="footer">
   <footer>
     <p>&copy;2013 No rights reserved.</p>
-    <p>Steal away. Made with sweat and tears by <a href="http://mkwng.com">Michael Wang</a>.
+    <p><a href="https://github.com/mkwng/Besterday/">Steal away</a>. Made with sweat and tears by <a href="http://mkwng.com">Michael Wang</a>.
   </footer>
 </template>
